--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ardunano"
 version = "0.1.0"
 authors = ["martin <martin.hogstedt@hotmail.com>"]
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 
 [[bin]]
 name = "ardunano"
@@ -15,6 +15,8 @@ panic-halt = "0.2.0"
 ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
+ssd1306 = "0.7.1"
+aht10 = "0.0.1"
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
